--- a/pax-cdi-jetty-openwebbeans/pom.xml
+++ b/pax-cdi-jetty-openwebbeans/pom.xml
@@ -81,7 +81,8 @@
 
         <dependency>
             <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-jcdi_1.0_spec</artifactId>
+            <artifactId>geronimo-jcdi_1.1_spec</artifactId>
+            <version>1.0-alpha-1</version>
             <scope>provided</scope>
         </dependency>
 
