--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -16,7 +16,6 @@
         <deltaspike.version>1.0.3</deltaspike.version>
         <jersey.version>1.13</jersey.version>
         <logback.version>1.0.0</logback.version>
-        <openwebbeans.version>1.2.6</openwebbeans.version>
         <openwebbeans15.version>1.5.0-SNAPSHOT</openwebbeans15.version>
         <openjpa.version>2.2.0</openjpa.version>
         <ops4j.base.version>1.5.0</ops4j.base.version>
@@ -27,8 +26,6 @@
         <pax.url.version>2.2.0</pax.url.version>
         <pax.web.version>4.0.0</pax.web.version>
         <slf4j.version>1.6.4</slf4j.version>
-        <weld.api.version>1.2.0.Beta1</weld.api.version>
-        <weld.version>1.2.0.Beta1</weld.version>
         <weld2.version>2.2.5.Final</weld2.version>
         <xbean.version>4.1</xbean.version>
 
@@ -239,19 +236,19 @@
             <dependency>
                 <groupId>org.apache.openwebbeans</groupId>
                 <artifactId>openwebbeans-spi</artifactId>
-                <version>${openwebbeans.version}</version>
+                <version>${openwebbeans15.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.apache.openwebbeans</groupId>
                 <artifactId>openwebbeans-impl</artifactId>
-                <version>${openwebbeans.version}</version>
+                <version>${openwebbeans15.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.apache.openwebbeans</groupId>
                 <artifactId>openwebbeans-web</artifactId>
-                <version>${openwebbeans.version}</version>
+                <version>${openwebbeans15.version}</version>
             </dependency>
 
             <dependency>
@@ -288,19 +285,13 @@
             <dependency>
                 <groupId>org.jboss.weld</groupId>
                 <artifactId>weld-core</artifactId>
-                <version>${weld.version}</version>
+                <version>${weld2.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.jboss.weld</groupId>
                 <artifactId>weld-osgi-bundle</artifactId>
-                <version>${weld.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.jboss.weld</groupId>
-                <artifactId>weld-api</artifactId>
-                <version>${weld.api.version}</version>
+                <version>${weld2.version}</version>
             </dependency>
 
             <dependency>
