--- a/pax-cdi-samples/pax-cdi-jetty-weld-war/pom.xml
+++ b/pax-cdi-samples/pax-cdi-jetty-weld-war/pom.xml
@@ -20,24 +20,14 @@
         <dependency>
             <groupId>org.jboss.weld.servlet</groupId>
             <artifactId>weld-servlet-core</artifactId>
-            <version>${weld.version}</version>
+            <version>${weld2.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.weld</groupId>
             <artifactId>weld-core</artifactId>
-            <version>${weld.version}</version>
+            <version>${weld2.version}</version>
             <scope>provided</scope>
         </dependency>
-<!--        
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-        </dependency>
--->        
     </dependencies>
 </project>
