--- a/tck/pax-cdi-tck11-porting/pom.xml
+++ b/tck/pax-cdi-tck11-porting/pom.xml
@@ -58,7 +58,7 @@
 
         <dependency>
             <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-jcdi_1.0_spec</artifactId>
+            <artifactId>geronimo-jcdi_1.1_spec</artifactId>
         </dependency>
 
         <dependency>
@@ -74,7 +74,7 @@
         <dependency>
             <groupId>org.apache.openwebbeans</groupId>            
             <artifactId>openwebbeans-el22</artifactId>
-            <version>${openwebbeans.version}</version>
+            <version>${openwebbeans15.version}</version>
         </dependency>
 
         <dependency>
