--- a/tck/pax-cdi-tck11-runner/pom.xml
+++ b/tck/pax-cdi-tck11-runner/pom.xml
@@ -59,7 +59,7 @@
         <dependency>
             <groupId>org.apache.xbean</groupId>
             <artifactId>xbean-finder-shaded</artifactId>
-            <version>3.18</version>
+            <version>${xbean.version}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -83,7 +83,7 @@
 
         <dependency>
             <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-jcdi_1.0_spec</artifactId>
+            <artifactId>geronimo-jcdi_1.1_spec</artifactId>
             <scope>test</scope>
         </dependency>
 
@@ -107,7 +107,7 @@
 
         <dependency>
             <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-interceptor_1.1_spec</artifactId>
+            <artifactId>geronimo-interceptor_1.2_spec</artifactId>
             <scope>provided</scope>
         </dependency>
 
