--- a/pax-cdi-web-openwebbeans/src/main/resources/META-INF/openwebbeans/standalone.properties
+++ b/pax-cdi-web-openwebbeans/src/main/resources/META-INF/openwebbeans/standalone.properties
@@ -24,6 +24,15 @@ org.apache.webbeans.spi.ContainerLifecycle=org.apache.webbeans.lifecycle.Standal
 org.apache.webbeans.spi.JNDIService=org.apache.webbeans.corespi.se.DefaultJndiService
 ################################################################################################
 
+################################### Default Bean Definition Archive Service ####################################
+org.apache.webbeans.spi.BeanArchiveService=org.apache.webbeans.xml.DefaultBeanArchiveService
+################################################################################################
+
+########################### Default ApplicationBoundary Service ################################
+#Default implementation of org.apache.webbeans.corespi.JNDIService.
+org.apache.webbeans.spi.ApplicationBoundaryService=org.apache.webbeans.corespi.se.DefaultApplicationBoundaryService
+################################################################################################
+
 ################################### Default Scanner Service ####################################
 #Default implementation of org.apache.webbeans.corespi.ScannerService.
 #org.apache.webbeans.spi.ScannerService=org.apache.webbeans.corespi.se.DefaultScannerService
