--- a/itest/src/it/itest-karaf/pom.xml
+++ b/itest/src/it/itest-karaf/pom.xml
@@ -83,7 +83,7 @@
 
         <dependency>
             <groupId>org.apache.xbean</groupId>
-            <artifactId>xbean-finder</artifactId>
+            <artifactId>xbean-finder-shaded</artifactId>
             <scope>provided</scope>
         </dependency>
 
