--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -211,7 +211,7 @@
 
             <dependency>
                 <groupId>org.apache.xbean</groupId>
-                <artifactId>xbean-finder</artifactId>
+                <artifactId>xbean-finder-shaded</artifactId>
                 <version>${xbean.version}</version>
             </dependency>
 
