--- a/pax-cdi-samples/pax-cdi-jetty-weld-war/pom.xml
+++ b/pax-cdi-samples/pax-cdi-jetty-weld-war/pom.xml
@@ -13,8 +13,8 @@
     
     <dependencies>
         <dependency>
-            <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-servlet_3.0_spec</artifactId>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
