--- a/pax-cdi-samples/pax-cdi-sample3-client/pom.xml
+++ b/pax-cdi-samples/pax-cdi-sample3-client/pom.xml
@@ -33,9 +33,10 @@
         </dependency>
     
         <dependency>
-            <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-jcdi_1.0_spec</artifactId>
-            </dependency>
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.osgi</groupId>
