--- a/pax-cdi-samples/pax-cdi-sample5-client1/pom.xml
+++ b/pax-cdi-samples/pax-cdi-sample5-client1/pom.xml
@@ -19,6 +19,12 @@
             <version>${project.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
