--- a/pax-cdi-web/pom.xml
+++ b/pax-cdi-web/pom.xml
@@ -40,8 +40,8 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-servlet_3.0_spec</artifactId>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
         </dependency>
 
         <dependency>
@@ -65,7 +65,9 @@
                     <instructions>
                         <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
                         <Import-Package>
-                            org.ops4j.pax.web.*;version="[3.0,5.0)", *
+                            org.ops4j.pax.web.*;version="[3.0,5.0)",
+                            javax.servlet.*;version="3.0",
+                            *
                         </Import-Package>
                     </instructions>
                 </configuration>
