--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -288,6 +288,12 @@
                 <version>3.0.17</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>org.apache.felix.scr.ds-annotations</artifactId>
+                <version>1.2.4</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -309,6 +315,7 @@
                     <version>2.5.3</version>
                     <extensions>true</extensions>
                     <configuration>
+                        <unpackBundle>true</unpackBundle>                
                         <instructions>
                             <Bundle-DocURL>${pax.cdi.wiki.url}</Bundle-DocURL>
                         </instructions>
