--- a/pax-cdi-samples/pax-cdi-sample2-service/pom.xml
+++ b/pax-cdi-samples/pax-cdi-sample2-service/pom.xml
@@ -79,11 +79,15 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>org.ops4j.pax.cdi.sample2.service</Bundle-SymbolicName>
+                        <Import-Package>
+                            javax.persistence*;version="[1.1,3)",
+                            *
+                        </Import-Package>
                         <Require-Capability>
                             org.ops4j.pax.cdi.extension; filter:="(&amp;(extension=pax-cdi-extension)(version&gt;=${version;==;${pax.cdi.osgi.version.clean}})(!(version&gt;=${version;=+;${pax.cdi.osgi.version.clean}})))",
-                            org.ops4j.pax.cdi.extension; filter:="(&amp;(extension=deltaspike-partial-bean-extension))",
-                            org.ops4j.pax.cdi.extension; filter:="(&amp;(extension=deltaspike-data-extension))",
-                            org.ops4j.pax.cdi.extension; filter:="(&amp;(extension=deltaspike-jpa-impl))",
+                            org.ops4j.pax.cdi.extension; filter:="(&amp;(extension=deltaspike-partial-bean-module-impl))",
+                            org.ops4j.pax.cdi.extension; filter:="(&amp;(extension=deltaspike-data-module-impl))",
+                            org.ops4j.pax.cdi.extension; filter:="(&amp;(extension=deltaspike-jpa-module-impl))",
                             org.ops4j.pax.cdi.extension; filter:="(&amp;(extension=deltaspike-core-impl))",
                             org.ops4j.pax.cdi.extension; filter:="(&amp;(extension=deltaspike-core-api))",
                             osgi.extender; filter:="(osgi.extender=pax.cdi)"
