--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -13,13 +13,13 @@
     <name>OPS4J Pax CDI Parent POM</name>
 
     <properties>
-        <deltaspike.version>1.1.0</deltaspike.version>
+        <deltaspike.version>1.1.1-SNAPSHOT</deltaspike.version>
         <jersey.version>1.13</jersey.version>
         <logback.version>1.0.0</logback.version>
         <openwebbeans15.version>1.5.0-SNAPSHOT</openwebbeans15.version>
         <openjpa.version>2.2.0</openjpa.version>
         <ops4j.base.version>1.5.0</ops4j.base.version>
-        <pax.exam.version>4.3.0</pax.exam.version>
+        <pax.exam.version>4.4.0</pax.exam.version>
         <pax.jdbc.version>0.3.0</pax.jdbc.version>
         <pax.jpa.version>0.3.0</pax.jpa.version>
         <pax.swissbox.version>1.8.0</pax.swissbox.version>
