--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -13,7 +13,7 @@
     <name>OPS4J Pax CDI Parent POM</name>
 
     <properties>
-        <deltaspike.version>1.1.1-SNAPSHOT</deltaspike.version>
+        <deltaspike.version>1.2.0</deltaspike.version>
         <jersey.version>1.13</jersey.version>
         <logback.version>1.0.0</logback.version>
         <openwebbeans15.version>1.5.0-SNAPSHOT</openwebbeans15.version>
