--- a/pax-cdi-samples/pax-cdi-sample4-jsf/pom.xml
+++ b/pax-cdi-samples/pax-cdi-sample4-jsf/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.ops4j.pax.cdi</groupId>
         <artifactId>pax-cdi-samples</artifactId>
-        <version>0.10.0-SNAPSHOT</version>
+        <version>0.10.0</version>
     </parent>
     <groupId>org.ops4j.pax.cdi.samples</groupId>
     <artifactId>pax-cdi-sample4-jsf</artifactId>
