--- a/pax-cdi-test-support/pom.xml
+++ b/pax-cdi-test-support/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.ops4j.pax.cdi</groupId>
         <artifactId>pax-cdi-parent</artifactId>
-        <version>0.10.0-SNAPSHOT</version>
+        <version>0.10.0</version>
         <relativePath>../pax-cdi-parent</relativePath>
     </parent>
     <artifactId>pax-cdi-test-support</artifactId>
