--- a/pax-cdi-fragment/pom.xml
+++ b/pax-cdi-fragment/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.ops4j.pax</groupId>
     <artifactId>cdi</artifactId>
-    <version>0.10.0</version>
+    <version>0.11.0-SNAPSHOT</version>
   </parent>
   
   <groupId>org.ops4j.pax.cdi</groupId>
