--- a/pax-cdi-web-weld/pom.xml
+++ b/pax-cdi-web-weld/pom.xml
@@ -117,6 +117,7 @@
                         <Import-Package>
                             org.jboss.weld.*; version="[1,3)",
                             javax.servlet.*;version="[2,4)",
+                            javax.el.*;version="[2.2,4)",
                             *
                         </Import-Package>
                         <_dsannotations>*</_dsannotations>
