--- a/pax-cdi-extender/pom.xml
+++ b/pax-cdi-extender/pom.xml
@@ -77,6 +77,10 @@
                     <instructions>
                         <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
                         <Service-Component>OSGI-INF/*</Service-Component>
+                        <Import-Package>
+                            org.slf4j;version="[1.6,2)";resolution:=optional,
+                            *
+                        </Import-Package>
                         <Provide-Capability>
                             osgi.extender; osgi.extender="pax.cdi"; version:Version=${version;====;${replace;${project.version};-;.}}
                         </Provide-Capability>
