--- a/pax-cdi-openwebbeans/pom.xml
+++ b/pax-cdi-openwebbeans/pom.xml
@@ -77,7 +77,11 @@
                     <instructions>
                         <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
                         <Bundle-Activator>${bundle.namespace}.impl.Activator</Bundle-Activator>
-                        <Import-Package>org.apache.xbean*;version="[3.18,5)", *</Import-Package>
+                        <Import-Package>
+                            org.apache.xbean*;version="[3.18,5)",
+                            org.slf4j;version="[1.6,2)";resolution:=optional,
+                            *
+                        </Import-Package>
                         <Service-Component>OSGI-INF/*</Service-Component>
                     </instructions>
                 </configuration>
