--- a/pax-cdi-servlet/pom.xml
+++ b/pax-cdi-servlet/pom.xml
@@ -57,7 +57,11 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
-                        <Import-Package>javax.servlet.*;version="[2,4)", *</Import-Package>
+                        <Import-Package>
+                            javax.servlet.*;version="[2,4)",
+                            org.slf4j;version="[1.6,2)";resolution:=optional,
+                            *
+                        </Import-Package>
                     </instructions>
                 </configuration>
             </plugin>
