--- a/pax-cdi-undertow-weld/pom.xml
+++ b/pax-cdi-undertow-weld/pom.xml
@@ -100,6 +100,7 @@
                             org.jboss.weld.*; version="[1,3)",
                             javax.servlet.*;version="[2,4)",
                             javax.faces.*;resolution:=optional,
+                            org.slf4j;version="[1.6,2)";resolution:=optional,
                             *
                         </Import-Package>
                         <Service-Component>OSGI-INF/*</Service-Component>
