--- a/pax-cdi-web-weld/pom.xml
+++ b/pax-cdi-web-weld/pom.xml
@@ -124,7 +124,10 @@
                         <Import-Package>
                             org.jboss.weld.*; version="[1,3)",
                             javax.servlet.*;version="[2,4)",
-                            *</Import-Package>
+                            org.eclipse.jetty*;version="[8,10)",
+                            org.slf4j;version="[1.6,2)";resolution:=optional,
+                            *
+                        </Import-Package>
                     </instructions>
                 </configuration>
             </plugin>
