--- a/pax-cdi-web/pom.xml
+++ b/pax-cdi-web/pom.xml
@@ -65,7 +65,9 @@
                     <instructions>
                         <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
                         <Import-Package>
-                            org.ops4j.pax.web.*;version="[3.0,5.0)", *
+                            org.ops4j.pax.web.*;version="[3.0,5.0)",
+                            org.slf4j;version="[1.6,2)";resolution:=optional,
+                            *
                         </Import-Package>
                     </instructions>
                 </configuration>
