--- a/pax-cdi-weld/pom.xml
+++ b/pax-cdi-weld/pom.xml
@@ -74,8 +74,9 @@
                         <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
                         <Service-Component>OSGI-INF/*</Service-Component>
                         <Import-Package>
-                           org.jboss.weld.*; version="[1,3)",
-                           *
+                            org.jboss.weld.*; version="[1,3)",
+                            org.slf4j;version="[1.6,2)";resolution:=optional,
+                            *
                         </Import-Package>
                     </instructions>
                 </configuration>
