--- a/pax-cdi-web-weld/pom.xml
+++ b/pax-cdi-web-weld/pom.xml
@@ -118,6 +118,8 @@
                             org.jboss.weld.*; version="[1,3)",
                             javax.servlet.*;version="[2,4)",
                             javax.el.*;version="[2.2,4)",
+                            org.eclipse.jetty*;version="[8,10)",
+                            org.slf4j;version="[1.6,2)";resolution:=optional,
                             *
                         </Import-Package>
                         <_dsannotations>*</_dsannotations>
