--- a/pax-cdi-web/pom.xml
+++ b/pax-cdi-web/pom.xml
@@ -66,7 +66,8 @@
                         <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
                         <Import-Package>
                             org.ops4j.pax.web.*;version="[3.0,5.0)",
-                            javax.servlet.*;version="3.0",
+                            javax.servlet.*;version="[2,4)",
+                            org.slf4j;version="[1.6,2)";resolution:=optional,
                             *
                         </Import-Package>
                     </instructions>
