--- a/pax-cdi-weld/pom.xml
+++ b/pax-cdi-weld/pom.xml
@@ -69,8 +69,9 @@
                     <instructions>
                         <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
                         <Import-Package>
-                           org.jboss.weld.*; version="[1,3)",
-                           *
+                            org.jboss.weld.*; version="[1,3)",
+                            org.slf4j;version="[1.6,2)";resolution:=optional,
+                            *
                         </Import-Package>
                         <_dsannotations>*</_dsannotations>
                     </instructions>
