--- a/itest/src/it/itest-karaf/pom.xml
+++ b/itest/src/it/itest-karaf/pom.xml
@@ -5,13 +5,13 @@
         <groupId>org.ops4j.pax.cdi</groupId>
         <version>1.0.0-SNAPSHOT</version>
         <artifactId>pax-cdi-parent</artifactId>
-        <relativePath>../../../pax-cdi-parent</relativePath>
+        <relativePath>../../../../pax-cdi-parent/pom.xml</relativePath>
     </parent>
 
     <groupId>org.ops4j.pax.cdi.itest</groupId>
     <artifactId>itest-karaf</artifactId>
 
-    <name>OPS4J Pax CDI 1.0 Integration Tests on Karaf</name>
+    <name>OPS4J Pax CDI 1.2 Integration Tests on Karaf</name>
 
     <properties>
         <karaf.version>3.0.2</karaf.version>
@@ -238,8 +238,6 @@
             <scope>test</scope>
         </dependency>
 
-
-
     </dependencies>
 
     <build>
@@ -298,18 +296,18 @@
                 <dependency>
                     <groupId>org.apache.felix</groupId>
                     <artifactId>org.apache.felix.framework</artifactId>
-                    <version>4.0.2</version>
+                    <version>4.6.0</version>
                     <scope>test</scope>
                 </dependency>
             </dependencies>
         </profile>
         <profile>
-            <id>owb1</id>
+            <id>owb15</id>
             <activation>
-                <activeByDefault>true</activeByDefault>
+                <activeByDefault>false</activeByDefault>
             </activation>
             <properties>
-                <pax.cdi.provider>owb1</pax.cdi.provider>
+                <pax.cdi.provider>owb15</pax.cdi.provider>
                 <pax.cdi.provider.name>owb</pax.cdi.provider.name>
             </properties>
             <dependencies>
@@ -323,49 +321,16 @@
 
                 <dependency>
                     <groupId>org.apache.xbean</groupId>
-                    <artifactId>xbean-asm-shaded</artifactId>
-                    <version>3.13</version>
+                    <artifactId>xbean-asm5-shaded</artifactId>
                     <scope>provided</scope>
                 </dependency>
 
             </dependencies>
         </profile>
-        <profile>
-            <id>weld1</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <properties>
-                <pax.cdi.provider>weld1</pax.cdi.provider>
-                <pax.cdi.provider.name>weld</pax.cdi.provider.name>
-            </properties>
-            <dependencies>
-
-                <dependency>
-                    <groupId>org.ops4j.pax.cdi</groupId>
-                    <artifactId>pax-cdi-web-weld</artifactId>
-                    <version>${project.version}</version>
-                    <scope>provided</scope>
-                </dependency>
-
-                <dependency>
-                    <groupId>org.apache.servicemix.bundles</groupId>
-                    <artifactId>org.apache.servicemix.bundles.asm</artifactId>
-                    <scope>provided</scope>
-                </dependency>
-
-                <dependency>
-                    <groupId>org.jboss.weld</groupId>
-                    <artifactId>weld-osgi-bundle</artifactId>
-                    <scope>provided</scope>
-                </dependency>
-            </dependencies>
-        </profile>
-
         <profile>
             <id>weld2</id>
             <activation>
-                <activeByDefault>false</activeByDefault>
+                <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
                 <pax.cdi.provider>weld2</pax.cdi.provider>
